fixed text-overflow in sidebar for long names and usernames.  fixed button collapse in contact add. added text-overflow utility class.

--- a/src/scss/_utility-classes.scss
+++ b/src/scss/_utility-classes.scss
@@ -130,10 +130,14 @@ Colors are placed in a SASS map object called `$colors`. The colors can be acces
 
 }
 
-@mixin ellipses(){
+@mixin ellipses() {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
+}
+
+.text-overflow {
+  @include ellipses();
 }
 
 .animate-appear {
